--- a/.github/workflows/ci_tests.yml
+++ b/.github/workflows/ci_tests.yml
@@ -26,15 +26,27 @@ jobs:
           bundle exec rake db:schema:load
       - name: Load fixtures
         run: bundle exec rake db:fixtures:load
+      - name: Cache Chromedriver
+        uses: actions/cache@v2
+        with:
+          path: ~/chromedriver
+          key: chromedriver-${{ hashFiles('**/.github/workflows/ci_tests.yml') }}
+          restore-keys: |
+            chromedriver-
       - name: Setup Chrome and Chromedriver
         run: |
-          sudo apt-get update
-          sudo apt-get install -yqq google-chrome-stable
-          CHROMEDRIVER_VERSION=`curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE`
-          wget -N http://chromedriver.storage.googleapis.com/$CHROMEDRIVER_VERSION/chromedriver_linux64.zip -P ~/
-          unzip ~/chromedriver_linux64.zip -d ~/
-          sudo mv -f ~/chromedriver /usr/local/bin/chromedriver
-          sudo chown root:root /usr/local/bin/chromedriver
+          mkdir -p ~/chromedriver
+          CACHED_VERSION=$(cat ~/chromedriver/version.txt || echo "")
+          LATEST_VERSION=$(curl -sS chromedriver.storage.googleapis.com/LATEST_RELEASE)
+          if [ "$LATEST_VERSION" != "$CACHED_VERSION" ]; then
+            echo "Downloading Chromedriver $LATEST_VERSION..."
+            wget -N http://chromedriver.storage.googleapis.com/$LATEST_VERSION/chromedriver_linux64.zip -P ~/chromedriver/
+            unzip -o ~/chromedriver/chromedriver_linux64.zip -d ~/chromedriver/
+            echo $LATEST_VERSION > ~/chromedriver/version.txt
+          else
+            echo "Using cached Chromedriver version: $CACHED_VERSION"
+          fi
+          sudo cp ~/chromedriver/chromedriver /usr/local/bin/chromedriver
           sudo chmod 0755 /usr/local/bin/chromedriver
       - name: Run tests
         run: bundle exec rake app:test
