Fix filtering inconsistencies
Closes https://github.com/josefarias/hotwire_combobox/pull/27

This PR fixes two things:

1. If you filter the listbox by typing an option all the way through,
the list is still filtered after closing and reopening it.
This was not the case when clicking an option without typing.
Now, selecting an option also filters the list for a consistent experience.

2. _isValidNewOption optionally ignores autocomplete sufficiency to allow
for new options which start the same as existing ones. But exact matches
shouldn't ever be ignored. Exact matches are never new.

--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -168,8 +168,8 @@
   "The Dark Knight Rises",
   "The Departed",
   "The Devil Wears Prada",
-  "The Godfather",
   "The Godfather Part II",
+  "The Godfather Part III",
   "The Gold Rush",
   "The Good, the Bad and the Ugly",
   "The Graduate",
