Wait until end of options stream to commit an async filter
Closes https://github.com/josefarias/hotwire_combobox/issues/40

--- a/test/fixtures/movies.yml
+++ b/test/fixtures/movies.yml
@@ -6,9 +6,9 @@
   "A Few Good Men",
   "A Nightmare on Elm Street",
   "A Quiet Place",
-  "A Star is Born (2018)",
+  "A Star is Born",
   "A Streetcar Named Desire",
-  "Aladdin (1992)",
+  "Aladdin",
   "Alien",
   "Aliens",
   "Amadeus",
