Add bugs and cosmetic changes sections to changelog template

--- a/.github/release.yml
+++ b/.github/release.yml
@@ -9,6 +9,14 @@ changelog:
       exclude:
         labels:
           - dependencies
+          - cosmetic
+          - bug
+    - title: 🎷🐛 Bug Fixes
+      labels:
+        - bug
+    - title: 💅 Cosmetic Changes
+      labels:
+        - cosmetic
     - title: 🗄️ Dependencies
       labels:
         - dependencies
