--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@
 /test/dummy/log/*.log
 /test/dummy/storage/
 /test/dummy/tmp/
+/app/assets/javascripts/hotwire_combobox.*.js
+/node_modules
+package-lock.json
+*.log
