Don't ignore readme

--- a/.npmignore
+++ b/.npmignore
@@ -7,3 +7,4 @@
 !app/assets/javascripts/
 !app/assets/javascripts/hotwire_combobox.esm.js
 !app/assets/javascripts/hotwire_combobox.umd.js
+README.md
