--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.3.2",
   "description": "An autocomplete combobox implementation for Ruby on Rails apps using Hotwire.",
   "module": "app/assets/javascripts/hotwire_combobox.esm.js",
-  "main": "app/assets/javascripts/hotwire_combobox.umd.js",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/josefarias/hotwire_combobox.git"
@@ -21,5 +20,6 @@
     "@rollup/plugin-alias": "^5.1.0",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "rollup": "^4.12.0"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
