Run CI on ruby 3.2 through 3.4

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,9 @@ jobs:
         run: bin/rubocop -f github
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        ruby-version: ['3.2', '3.3', '3.4']
     steps:
       - name: SQLite3 version
         run: sqlite3 --version
@@ -33,7 +36,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 3.2
+          ruby-version: ${{ matrix.ruby-version }}
           bundler: default
           bundler-cache: true
           rubygems: latest
